[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/font_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font_60.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/proc.jpg" type="Texture" id=4]
[ext_resource path="res://assets/light_1.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
normal_map = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.145098, 0.192157, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.419608, 0.486275, 0.435294, 1 )

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1103.64, 953.846 ), Vector2( -287.818, 1015.72 ), Vector2( 1192.73, 1167.66 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 721.0
margin_bottom = 1281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.05945
margin_right = -1.05945
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Control"]
modulate = Color( 1, 1, 1, 0.576471 )
light_mask = 0
margin_left = 4.75507
margin_top = 910.448
margin_right = 148.755
margin_bottom = 1150.45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0.862745 )
light_mask = 0
anchor_right = 1.0
margin_left = -1.68176
margin_top = 237.133
margin_right = -1.68176
margin_bottom = 501.133
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="Control/Panel2"]
light_mask = 0
margin_left = 11.6541
margin_top = 29.665
margin_right = 81.6541
margin_bottom = 43.665
custom_fonts/font = ExtResource( 2 )
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="Label" parent="Control/Panel2"]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.0109
margin_top = -105.114
margin_right = 82.0109
margin_bottom = -91.1139
custom_fonts/font = ExtResource( 2 )
text = "password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username_edit" type="LineEdit" parent="Control/Panel2"]
light_mask = 0
margin_left = 179.044
margin_top = 32.409
margin_right = 579.044
margin_bottom = 78.409
custom_fonts/font = ExtResource( 2 )

[node name="password_edit" type="LineEdit" parent="Control/Panel2"]
light_mask = 0
margin_left = 181.408
margin_top = 157.817
margin_right = 581.408
margin_bottom = 203.817
custom_fonts/font = ExtResource( 2 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log_in_button" type="Button" parent="Control/Panel2"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -42.0
margin_right = 47.0
custom_fonts/font = ExtResource( 2 )
text = "Log In"

[node name="Panel3" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0.878431 )
light_mask = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 0.5
margin_bottom = 244.5
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="Control/Panel3"]
light_mask = 0
margin_left = 11.6541
margin_top = 29.665
margin_right = 81.6541
margin_bottom = 43.665
custom_fonts/font = ExtResource( 2 )
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="Label" parent="Control/Panel3"]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.3291
margin_top = -158.931
margin_right = 153.329
margin_bottom = -122.931
custom_fonts/font = ExtResource( 2 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username_edit" type="LineEdit" parent="Control/Panel3"]
light_mask = 0
margin_left = 202.589
margin_top = 15.5909
margin_right = 602.589
margin_bottom = 61.5909
custom_fonts/font = ExtResource( 2 )

[node name="password_edit" type="LineEdit" parent="Control/Panel3"]
light_mask = 0
margin_left = 203.271
margin_top = 77.0906
margin_right = 603.271
margin_bottom = 123.091
custom_fonts/font = ExtResource( 2 )
secret = true

[node name="password2" type="Label" parent="Control/Panel3"]
light_mask = 0
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.2029
margin_top = -100.424
margin_right = 195.203
margin_bottom = -64.4238
custom_fonts/font = ExtResource( 2 )
text = "Redo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_edit2" type="LineEdit" parent="Control/Panel3"]
light_mask = 0
margin_left = 202.649
margin_top = 137.28
margin_right = 602.649
margin_bottom = 183.28
custom_fonts/font = ExtResource( 2 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_button" type="Button" parent="Control/Panel3"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -42.0
margin_right = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect_panel" type="Control" parent="Control"]
visible = false
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -78.0
margin_right = 141.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/Connect_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Control/Connect_panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -7.0
margin_right = 55.0
margin_bottom = 7.0
grow_horizontal = 2
text = "Attempting Login"

[node name="Timer" type="Timer" parent="Control/Connect_panel"]
wait_time = 2.0

[node name="Label" type="Label" parent="Control"]
light_mask = 0
margin_left = 258.293
margin_top = 190.34
margin_right = 430.293
margin_bottom = 226.34
custom_fonts/font = ExtResource( 2 )
text = "Existing User"

[node name="Label2" type="Label" parent="Control"]
light_mask = 0
margin_left = 220.904
margin_top = 587.981
margin_right = 491.904
margin_bottom = 623.981
custom_fonts/font = ExtResource( 2 )
text = "Create new Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete_button" type="Button" parent="Control"]
light_mask = 0
margin_left = 30.5299
margin_top = 1163.85
margin_right = 85.5299
margin_bottom = 1183.85
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
light_mask = 0
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.0
margin_top = 69.5927
margin_right = 143.0
margin_bottom = 140.593
custom_fonts/font = ExtResource( 3 )
text = "Trike Rider"

[node name="Quit_button" type="Button" parent="Control"]
light_mask = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -77.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Control"]
light_mask = 2
position = Vector2( -185.003, 1038.31 )
scale = Vector2( 2.89696, 5.94455 )
texture = ExtResource( 5 )
color = Color( 0.0823529, 0.933333, 0.952941, 1 )
energy = 0.84
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Light2D"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )

[connection signal="item_selected" from="Control/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Control/Panel2/Log_in_button" to="." method="_on_Log_in_button_pressed"]
[connection signal="pressed" from="Control/Panel3/Create_button" to="." method="_on_Create_button_pressed"]
[connection signal="timeout" from="Control/Connect_panel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/Delete_button" to="." method="_on_Delete_button_pressed"]
[connection signal="pressed" from="Control/Quit_button" to="." method="_on_Quit_button_pressed"]
